--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/socket.io-redis": "^5.2.0",
     "@sailshq/lodash": "^3.10.3",
+    "sails-postgresql": "^1.0.2",
     "async": "2.0.1"
   },
   "devDependencies": {
